--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   },
   "dependencies": {
     "immutable": "^3.7.5",
-    "react-native": "^0.16.0"
+    "react": "^0.14.3",
+    "react-native": "^0.16.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
+    "redux-thunk": "^1.0.0"
+  },
+  "devDependencies": {
+    "redux-devtools": "^2.1.5"
   }
 }
