--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "immutable": "^3.7.5",
     "react": "^0.14.3",
     "react-native": "^0.16.0",
+    "react-native-refreshable-listview": "^1.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.0"
