--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "reading",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "start": "react-native start",
+    "setup": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
     "immutable": "^3.7.5",
     "react-native": "^0.18.0",
-    "react-native-refreshable-listview": "^1.3.0",
+    "react-native-scrollable-tab-view": "^0.3.5",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3"
