--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "immutable": "^3.7.5",
     "react-native": "^0.18.0",
     "react-native-scrollable-tab-view": "^0.3.5",
+    "react-native-wechat": "^1.2.3",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3"
