--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+READING_RELEASE_STORE_FILE=reading.keystore
+READING_RELEASE_KEY_ALIAS=reading
+READING_RELEASE_STORE_PASSWORD=jiushigan
+READING_RELEASE_KEY_PASSWORD=jiushigan
