--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,12 @@ DerivedData
 project.xcworkspace
 
 # Android/IJ
-#
 .idea
 .gradle
 local.properties
+app/app.iml
+app/reading.keystore
 
 # node.js
-#
 node_modules/
 npm-debug.log
