--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,4 +131,5 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.18.+"
     compile project(':RCTWeChat')
+    compile project(':react-native-code-push')
 }
