--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "immutable": "^3.7.5",
     "react-native": "^0.18.0",
+    "react-native-code-push": "^1.6.0-beta",
     "react-native-scrollable-tab-view": "^0.3.5",
     "react-native-wechat": "^1.2.5",
     "react-redux": "^4.1.2",
