--- a/ios/reading/Info.plist
+++ b/ios/reading/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.1.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -35,6 +35,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CodePushDeploymentKey</key>
+	<string>U7ZF2kYt5EzV14JyIB22SLRhQ2KBV1Ifekvul</string>
 	<key>LSApplicationQueriesSchemas</key>
 	<array>
 		<string>wechat</string>
