--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
+    "avoscloud-sdk": "^1.0.0-rc6",
     "immutable": "^3.7.5",
     "react-native": "^0.19.0",
     "react-native-code-push": "^1.7.0-beta",
