--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'reading'
 
-include ':app', ':RCTWeChat', ':react-native-code-push'
+include ':app', ':RCTWeChat', ':react-native-code-push', ':RNDeviceInfo'
 project(':RCTWeChat').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wechat/android')
 project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
+project(':RNDeviceInfo').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
