--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "immutable": "^3.7.5",
     "react-native": "^0.20.0",
     "react-native-code-push": "^1.7.0-beta",
+    "react-native-device-info": "^0.8.3",
     "react-native-scrollable-tab-view": "^0.3.6",
     "react-native-wechat": "^1.3.0",
     "react-redux": "^4.4.0",
