add shrinkResources true

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,6 +109,7 @@ android {
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
+            shrinkResources true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
         }
