实在忍不住小心翼翼的把react-native升级到0.22.2，踩了这么一些坑总算debug和release没问题了

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,7 @@ def enableProguardInReleaseBuilds = true
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.reading"
@@ -110,7 +111,6 @@ android {
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
-            shrinkResources enableProguardInReleaseBuilds
             zipAlignEnabled true
             pseudoLocalesEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
