--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reading",
-  "version": "0.1.0",
+  "version": "0.1.5-rc",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -12,7 +12,7 @@
     "react": "^0.14.5",
     "react-native": "^0.22.2",
     "react-native-code-push": "^1.7.3-beta",
-    "react-native-device-info": "^0.9.0",
+    "react-native-device-info": "^0.9.1",
     "react-native-scrollable-tab-view": "^0.4.0",
     "react-native-wechat": "^1.3.2",
     "react-redux": "^4.4.1",
