update version and fix bugs

--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "dependencies": {
     "avoscloud-sdk": "1.0.0-rc5",
     "immutable": "^3.7.6",
-    "react": "^0.14.8",
-    "react-native": "^0.25.1",
+    "react": "^15.0.2",
+    "react-native": "^0.26.0",
     "react-native-code-push": "^1.7.3-beta",
     "react-native-device-info": "^0.9.3",
-    "react-native-scrollable-tab-view": "^0.4.2",
+    "react-native-scrollable-tab-view": "^0.4.3",
     "react-native-wechat": "^1.4.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.1",
-    "redux-thunk": "^2.0.1"
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.2",
-    "eslint": "^2.7.0",
-    "eslint-plugin-react": "^4.2.3",
-    "redux-devtools": "^3.2.0"
+    "babel-eslint": "^6.0.4",
+    "eslint": "^2.10.2",
+    "eslint-plugin-react": "^5.1.1",
+    "redux-devtools": "^3.3.1"
   }
 }
