--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "avoscloud-sdk": "1.0.0-rc5",
     "immutable": "^3.7.6",
     "react": "^15.0.2",
-    "react-native": "^0.26.0",
+    "react-native": "^0.26.1",
     "react-native-code-push": "^1.7.3-beta",
     "react-native-device-info": "^0.9.3",
     "react-native-scrollable-tab-view": "^0.4.3",
@@ -24,6 +24,7 @@
     "babel-eslint": "^6.0.4",
     "eslint": "^2.10.2",
     "eslint-plugin-react": "^5.1.1",
-    "redux-devtools": "^3.3.1"
+    "redux-devtools": "^3.3.1",
+    "rnpm-plugin-upgrade": "^0.26.0"
   }
 }
