--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "setup": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
+    "setup": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm",
+    "test": "NODE_ENV=test jest",
+    "flow": "flow"
   },
   "dependencies": {
     "avoscloud-sdk": "1.0.0-rc5",
@@ -23,9 +25,47 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
+    "babel-jest": "^12.1.0",
+    "babel-polyfill": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "eslint": "^2.10.2",
     "eslint-plugin-react": "^5.1.1",
+    "jest-cli": "^12.1.1",
+    "react-addons-test-utils": "^15.0.2",
+    "react-dom": "^15.0.2",
     "redux-devtools": "^3.3.1",
     "rnpm-plugin-upgrade": "^0.26.0"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/react-native/jestSupport/preprocessor.js",
+    "setupEnvScriptFile": "<rootDir>/node_modules/react-native/jestSupport/env.js",
+    "haste": {
+      "defaultPlatform": "android",
+      "platforms": [
+        "ios",
+        "android"
+      ],
+      "providesModuleNodeModules": [
+        "react-native"
+      ]
+    },
+    "testFileExtensions": [
+      "js"
+    ],
+    "testDirectoryName": [
+      "_test_"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/local-cli/rnpm/"
+    ],
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-native",
+      "promise",
+      "source-map",
+      "fbjs"
+    ]
   }
 }
