--- a/ios/reading.xcodeproj/xcshareddata/xcschemes/reading.xcscheme
+++ b/ios/reading.xcodeproj/xcshareddata/xcschemes/reading.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "reading.app"
+               BuildableName = "Reading.app"
                BlueprintName = "reading"
                ReferencedContainer = "container:reading.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reading.app"
+            BuildableName = "Reading.app"
             BlueprintName = "reading"
             ReferencedContainer = "container:reading.xcodeproj">
          </BuildableReference>
@@ -80,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reading.app"
+            BuildableName = "Reading.app"
             BlueprintName = "reading"
             ReferencedContainer = "container:reading.xcodeproj">
          </BuildableReference>
@@ -99,7 +99,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reading.app"
+            BuildableName = "Reading.app"
             BlueprintName = "reading"
             ReferencedContainer = "container:reading.xcodeproj">
          </BuildableReference>
