--- a/ios/reading/Info.plist
+++ b/ios/reading/Info.plist
@@ -36,7 +36,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CodePushDeploymentKey</key>
-	<string>U7ZF2kYt5EzV14JyIB22SLRhQ2KBV1Ifekvul</string>
+	<string>$(CODEPUSH_KEY)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
