引入airbnb eslint，先修改一波

--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "clear": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm",
-    "test": "mocha --require react-native-mock/mock.js --compilers js:babel-core/register --recursive app/**/*/*.spec.js"
+    "test": "mocha --require react-native-mock/mock.js --compilers js:babel-core/register --recursive app/**/*/*.spec.js",
+    "lint": "eslint"
   },
   "dependencies": {
     "avoscloud-sdk": "1.0.0-rc5",
     "immutable": "^3.7.6",
-    "react": "15.1.0",
+    "react": "~15.1.0",
     "react-native": "^0.28.0",
     "react-native-code-push": "^1.12.2-beta",
     "react-native-device-info": "^0.9.3",
     "react-native-drawer-layout": "^1.0.0",
     "react-native-root-toast": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.5.2",
-    "react-native-wechat": "^1.4.6",
+    "react-native-wechat": "^1.4.7",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
@@ -29,11 +30,14 @@
     "babel-preset-react-native": "^1.9.0",
     "chai": "^3.5.0",
     "enzyme": "^2.3.0",
-    "eslint": "^2.12.0",
+    "eslint": "^2.13.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
-    "react-addons-test-utils": "15.1.0",
-    "react-dom": "15.1.0",
+    "react-addons-test-utils": "~15.1.0",
+    "react-dom": "~15.1.0",
     "react-native-mock": "^0.2.4",
     "redux-devtools": "^3.3.1",
     "rnpm-plugin-upgrade": "^0.26.0"
