--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "no-use-before-define": 0,
         "prefer-stateless-function": 0,
         "radix": ["error", "as-needed"],
-        "react/prefer-stateless-function": 0
+        "react/prefer-stateless-function": 0,
+        "no-param-reassign": 0
     }
 }
