优化item页面显示

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-drawer-layout": "^1.0.0",
     "react-native-root-toast": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.5.3",
+    "react-native-timeago": "^0.3.0",
     "react-native-wechat": "^1.4.7",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
