--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reading",
-  "version": "0.1.5-rc",
+  "version": "1.0.0-rc",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -10,36 +10,36 @@
   },
   "dependencies": {
     "immutable": "^3.7.6",
-    "leancloud-storage": "^1.2.1",
+    "leancloud-storage": "^1.3.1",
     "react": "~15.2.0",
-    "react-native": "^0.29.1",
+    "react-native": "^0.30.0",
     "react-native-code-push": "^1.13.2-beta",
     "react-native-device-info": "^0.9.3",
     "react-native-drawer-layout": "^1.0.0",
     "react-native-root-toast": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.5.3",
     "react-native-timeago": "^0.3.0",
-    "react-native-wechat": "^1.4.7",
+    "react-native-wechat": "^1.5.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-preset-react-native": "^1.9.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "^2.13.0",
     "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-jsx-a11y": "~1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "~15.2.0",
     "react-dom": "~15.2.0",
-    "react-native-mock": "^0.2.4",
+    "react-native-mock": "^0.2.5",
     "redux-devtools": "^3.3.1",
     "rnpm-plugin-upgrade": "^0.26.0"
   }
