--- a/.travis.yml
+++ b/.travis.yml
@@ -1,57 +1,59 @@
 matrix:
   include:
-    - os: osx
-      language: objective-c
-      sudo: false
-      osx_image: xcode7.3
-    - os: linux
-      language: android
-      sudo: required
-      jdk: oraclejdk8
-      android:
-        components:
-          - build-tools-23.0.1
-          - android-23
-          - extra-android-m2repository
-          - extra-android-support
+  - os: osx
+    language: objective-c
+    sudo: false
+    osx_image: xcode7.3
+  - os: linux
+    language: android
+    sudo: required
+    jdk: oraclejdk8
+    android:
+      components:
+      - build-tools-23.0.1
+      - android-23
+      - extra-android-m2repository
+      - extra-android-support
 env:
   global:
-    - PROJECT_MOBILE=reading
+  - PROJECT_MOBILE=reading
 cache:
   directories:
-    - reading/node_modules
+  - reading/node_modules
 before_install:
-  - openssl aes-256-cbc -K $encrypted_549897007358_key -iv $encrypted_549897007358_iv
-    -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
-  - chmod 600 ~/.ssh/id_rsa
-  - eval $(ssh-agent)
-  - ssh-add ~/.ssh/id_rsa
-  - cp .travis/ssh_config ~/.ssh/config
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update ; fi
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update  ; fi
-  - rvm get head
+- openssl aes-256-cbc -K $encrypted_549897007358_key -iv $encrypted_549897007358_iv
+  -in .travis/secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then mv gradle.properties android ; fi
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then mv reading.keystore android/app ; fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update ; fi
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update  ; fi
+- rvm get head
+- gem install fir-cli
 install:
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew reinstall watchman xctool  ; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then mkdir -p /Users/travis/build/reading/.nvm ; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export NVM_DIR="/Users/travis/build/reading/.nvm" ; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install nvm ; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then source $(brew --prefix nvm)/nvm.sh ; fi
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.30.0/install.sh | bash ; fi
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then source ~/.bashrc ; fi
-  - nvm install 5
-  - npm config set spin=false
-  - npm config set progress=false
-  - travis_wait npm install
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew reinstall watchman xctool  ; fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then mkdir -p /Users/travis/build/reading/.nvm
+  ; fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export NVM_DIR="/Users/travis/build/reading/.nvm"
+  ; fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install nvm ; fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then source $(brew --prefix nvm)/nvm.sh ; fi
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.30.0/install.sh | bash ; fi
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then source ~/.bashrc ; fi
+- nvm install 5
+- npm config set spin=false
+- npm config set progress=false
+- travis_wait npm install
 branches:
   only:
-    - master
+  - master
 script:
-# react-native-wechat library maybe throw ios error: 'RCTBridgeModule.h' file not found
-  - npm run lint app
-  - npm test
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then xctool \
-        -project ios/$PROJECT_MOBILE.xcodeproj \
-        -scheme $PROJECT_MOBILE -sdk iphonesimulator9.3
-        test ; fi
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then cd android && ./gradlew test --stacktrace ; fi
-
+- npm run lint app
+- npm test
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then xctool -project ios/$PROJECT_MOBILE.xcodeproj
+  -scheme $PROJECT_MOBILE -sdk iphonesimulator9.3 test ; fi
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then cd android && ./gradlew clean && ./gradlew resguard --stacktrace
+  ; fi
+after_success:
+- if [[ $TRAVIS_OS_NAME == 'linux' ]]; then fir p /home/travis/build/attentiveness/reading/android/app/build/outputs/apk/AndResGuard_app-armeabi-v7a-release/app-armeabi-v7a-release_signed_7zip_aligned.apk
+  -T $FIR_TOKEN -c "$TRAVIS_TAG" ; fi
