--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "babel-preset-react-native": "^1.9.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
-    "eslint": "^2.13.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.11.1",
-    "eslint-plugin-jsx-a11y": "~1.5.5",
-    "eslint-plugin-react": "^5.2.2",
-    "mocha": "^2.5.3",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "mocha": "^3.0.0",
     "react-addons-test-utils": "~15.2.1",
     "react-dom": "~15.2.1",
     "react-native-mock": "^0.2.5",
