--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "react-addons-test-utils": "~15.2.1",
     "react-dom": "~15.2.1",
     "react-native-mock": "^0.2.5",
-    "redux-devtools": "^3.3.1",
-    "rnpm-plugin-upgrade": "^0.26.0"
+    "redux-devtools": "^3.3.1"
   }
 }
