--- a/ios/reading/Info.plist
+++ b/ios/reading/Info.plist
@@ -29,7 +29,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxd930ea5d5a258f4f</string>
+				<string>wxb24c445773822c79</string>
 			</array>
 		</dict>
 	</array>
