--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'reading'
 
-include ':app', ':RCTWeChat', ':react-native-code-push', ':RNDeviceInfo'
+include ':app', ':RCTWeChat', ':react-native-code-push', ':RNDeviceInfo', ':react-native-vector-icons'
 project(':RCTWeChat').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wechat/android')
 project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
 project(':RNDeviceInfo').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
