added redux-persist for persisting state.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^4.8.3",
     "redux-saga": "^0.15.6"
   },
   "jest": {
@@ -45,6 +46,7 @@
     "babel-preset-react-native": "2.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-angular": "^3.0.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
